Fix broken css on new firefox release

--- a/partial/home/firefox/userChrome.css
+++ b/partial/home/firefox/userChrome.css
@@ -21,7 +21,8 @@
     background-color: var(--separator-color) !important;
     width: 1px !important;
     height: 20px !important;
-    transform: translateY(-10px) !important;
+    top: 50% !important;
+    transform: translateY(-50%) !important;
     opacity: 0 !important;
     transition: opacity 0.2s ease !important;
 }
